--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ eframe = "0.33"
 egui = "0.33"
 cpal = "0.15"
 crossbeam-channel = "0.5"
+dirs = "5"
 rand = { version = "0.8", features = ["small_rng"] }
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.8"
