--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
         include:
           - target: x86_64-unknown-linux-gnu
             os: ubuntu-latest
-            artifact_name: contest_trainer
+            artifact_name: contest_trainer-linux-x86_64
             asset_name: contest_trainer-linux-x86_64
 
           - target: x86_64-pc-windows-msvc
@@ -28,12 +28,12 @@ jobs:
 
           - target: x86_64-apple-darwin
             os: macos-latest
-            artifact_name: contest_trainer
+            artifact_name: contest_trainer-macos-x86_64
             asset_name: contest_trainer-macos-x86_64
 
           - target: aarch64-apple-darwin
             os: macos-latest
-            artifact_name: contest_trainer
+            artifact_name: contest_trainer-macos-aarch64
             asset_name: contest_trainer-macos-aarch64
 
     steps:
