--- a/.github/workflows/deps-daily-toml-upgrade.yml
+++ b/.github/workflows/deps-daily-toml-upgrade.yml
@@ -1,8 +1,8 @@
-name: Deps Daily (Cargo.toml upgrade, incompatible)
+name: Deps Weekly (Cargo.toml upgrade, incompatible)
 
 on:
   schedule:
-    - cron: "0 7 * * *"
+    - cron: "0 7 * * 1"
   workflow_dispatch:
 
 env:
@@ -10,7 +10,7 @@ env:
 
 jobs:
   build:
-    name: Deps Daily (Cargo.toml upgrade, incompatible)
+    name: Deps Weekly (Cargo.toml upgrade, incompatible)
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -24,11 +24,14 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libasound2-dev libxcb-render0-dev libxcb-shape0-dev libxcb-xfixes0-dev libxkbcommon-dev
 
-      - name: Install cargo-edit
-        run: cargo install cargo-edit --locked
+      - name: Ensure cargo bin on PATH
+        run: echo "$HOME/.cargo/bin" >> "$GITHUB_PATH"
+
+      - name: Install cargo-edit (upgrade feature)
+        run: cargo install cargo-edit --locked --features upgrade
 
       - name: Upgrade Cargo.toml dependencies
-        run: cargo upgrade --incompatible --all --workspace
+        run: cargo upgrade --incompatible allow
 
       - name: Update lockfile
         run: cargo update
