--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ dirs = "5"
 rand = { version = "0.8", features = ["small_rng"] }
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.8"
+chrono = "0.4"
